# housework

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  compose.yaml
.github/workflows/: backend-ci.yml  frontend-ci.yml  production-artifacts.yml  python-lint.yml  python-tests.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/housework_api/: __init__.py  app.py  auth.py  db.py  tasks_repository.py
backend/src/housework_api/routes/: __init__.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_db.py  test_tasks.py
deploy/caddy/: Caddyfile
docs/: FRONTEND.md  PRODUCTION.md
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/components/: LandingPage.test.tsx  LandingPage.tsx  TaskList.test.tsx  TaskList.tsx  TaskListItem.test.tsx  TaskListItem.tsx
frontend/src/data/: placeholderTasks.ts
frontend/src/styles/: global.css  tokens.css
frontend/src/types/: task.ts
openapi/: README.md  openapi.yaml
