[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "housework-api"
version = "0.1.0"
description = "Flask API for Housework."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "Flask>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.5,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/housework_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP007", "UP045"]
